chore: add backend folder structure

--- a/backend/SweetShop.Api/SweetShop.Api.csproj
+++ b/backend/SweetShop.Api/SweetShop.Api.csproj
@@ -13,6 +13,15 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Middlware\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="Data\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Repositories\Implementations\" />
+    <Folder Include="Repositories\Interfaces\" />
+    <Folder Include="Services\Implementations\" />
+    <Folder Include="Services\Interfaces\" />
   </ItemGroup>
 
 </Project>
