chore: database setup using EF Core and SQL Server

--- a/backend/SweetShop.Api/appsettings.json
+++ b/backend/SweetShop.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnectionString": "Server=DESKTOP-QBJ7RSI\\SQLEXPRESS;Database=SweetShopManagementSystem;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
