feat: implement logic for login when returned jwt token on success

--- a/backend/SweetShop.Api/appsettings.json
+++ b/backend/SweetShop.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbConnectionString": "Server=DESKTOP-QBJ7RSI\\SQLEXPRESS;Database=SweetShopManagementSystem;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+  },
+  "JwtSettings": {
+      "Key": "THIS_IS_SECRET_KEY_FOR_SWEET_SHOP_MANAGEMENT_SYSTEM_432004",
+      "Issuer": "SweetShop.Api",
+      "Audience": "SweetShop.Client",
+      "ExpiryMinutes": 60
+   }
 }
